--- a/style.css
+++ b/style.css
@@ -95,6 +95,65 @@ header .container {
 .hero p {
     margin-bottom: 20px;
 }
+
+/* Section boni */
+
+#student-bonus img {
+    position: absolute;
+    z-index: -8;
+    width: 100%;
+}
+
+#bonusText{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+
+#mainBonusText{
+    background-color: rgba(255, 255, 255, 0.747);
+    width: 30%;
+    height: auto;
+    margin: 50px;
+    border-radius: 30px;
+    padding: 20px;
+}
+
+#conditions{
+    margin-top: 10px;
+    font-size: x-small;
+}
+
+#knowMore{
+    padding: 10px;
+    border: none;
+    background-color:#0066cc;
+    color: white;
+    border-radius: 5px;
+    margin: 20px
+}
+
+#offerTagContainer{
+    display: flex;
+    justify-content: center;
+}
+
+#offerTag{
+    border-radius: 5px;
+    align-self: center;
+    margin-bottom: 20px;
+
+    background-color: #28a745;
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
 /* Services */
 #services {
     padding: 40px 0;
@@ -120,8 +179,6 @@ header .container {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
-
-
 
 #about, #contact {
     margin-bottom: 30px;
